--- a/src/css/header.css
+++ b/src/css/header.css
@@ -31,6 +31,16 @@
     }
 }
 
+.header-form-container {
+    margin-top: 29px;
+    padding-right: 15px;
+}
+
+.header-form-btn {
+    margin-top: 30px;
+    padding-right: 25px;
+}
+
 /* ipad */
 @media (max-width: 769px) {
 
