--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,5 +1,5 @@
 .input-container {
-    padding: 10px 10px 10px 0px;
+    padding: 10px 0px 10px 0px;
 }
 
 .input {
@@ -12,3 +12,11 @@
     box-shadow: 0px 0px #161E6D;
 }
 
+
+/* mobile devices */
+@media (max-width: 500px) {
+    .input-container{
+        padding: 5px 0px 5px 0px;
+    }
+
+}
