design what we are design

--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -25,6 +25,14 @@
     margin: 2px;
 }
 
+.who-itcan-services-container {
+    width: 95%;
+    margin: 122px auto 0px auto; 
+}
+
+.who-itcan-sevices-container Col {
+    margin: 1px;
+}
 
 
 /* 500 */
