--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -34,6 +34,15 @@
     margin: 1px;
 }
 
+.itcan-location-container {
+    width: 95%;
+    margin: 122px auto 0px auto; 
+}
+
+.itcan-location-container Col {
+    margin: 1px;
+}
+
 
 /* 500 */
 @media (max-width: 500px) {
