--- a/src/css/value-container.css
+++ b/src/css/value-container.css
@@ -7,7 +7,7 @@
     width: 454px;
     height: 491px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 0px 0px 30px #000000;
+    box-shadow: 0px 0px 30px #b8bbbf;
     border-radius: 20px;
     margin: 0 auto;
     top: 0;
