--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -43,6 +43,14 @@
     margin: 1px;
 }
 
+.itcan-clients-container {
+    width: 95%;
+    margin: 80px auto 0px auto; 
+}
+
+.itcan-clients-container Col {
+    margin: 1px;
+}
 
 /* 500 */
 @media (max-width: 500px) {
