--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,4 @@
 .header-left {
-    background-color: #F95D5D;
     height: 895px;
 }
 
@@ -23,6 +22,13 @@
     margin-top: 30px;
     padding-right: 25px;
     padding-left: 15px;
+}
+
+.header-left-background {
+    position: absolute;
+    width: 90%;
+    height: 20%;
+    background: transparent linear-gradient(90deg, #F95D5D 0%, #D2345B 100%) 0% 0% no-repeat padding-box;
 }
 
 .itcan-logo-img {
@@ -112,6 +118,12 @@
         padding-left: 57px;
         padding-right: 57px;
     }
+
+    .header-left-background {
+        width: 100%;
+        height: 28%;
+    }
+
     .itcan-logo-img {
         margin: auto;
         left: 0;
