--- a/src/css/section-header.css
+++ b/src/css/section-header.css
@@ -1,11 +1,12 @@
 .section-header-container {
     justify-content: center;
     align-items: center;
+    margin-top: 150px;
 }
 
 .section-header-container h4 {
     color: #000000;
-    font-size: 55px;
+    font-size: 50px;
     font-weight: bold;
     text-align: center;
 }
