--- a/src/css/industry-container.css
+++ b/src/css/industry-container.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 502px;
-    height: 357px;
+    width: 390px;
+    height: 305px;
     margin: 0 auto;
     top: 0;
     transition: top ease 0.5s;
@@ -21,11 +21,17 @@
     height: 800%;
 }
 
+.industry-container p {
+    font-size: 30px;
+    font-weight: 500;
+    padding-top: 15px;
+}
 
 /* 1440px */
 @media (max-width: 1440px) {
     .industry-container {
-        width: 400px;
+        width: 340px;
+        height: 265px;
     }
 }
 
