--- a/src/css/header.css
+++ b/src/css/header.css
@@ -59,6 +59,30 @@
     right: 0;
     width: 12.5%;
     height: 30vw;
+    -webkit-animation: 1.5ms ease 0s normal forwards 1 fadein;
+    animation: 1.5s ease 0s normal forwards 1 fadein;
+}
+
+@keyframes fadein{
+    0% { opacity:0; }
+    33% { opacity:0.3; }
+    66% { opacity:0.5; }
+    88% { opacity:0.8; }
+    100% { opacity:1; }
+}
+
+@-webkit-keyframes fadein{
+    0% { opacity:0; }
+    33% { opacity:0.3; }
+    66% { opacity:0.5; }
+    88% { opacity:0.8; }
+    100% { opacity:1; }
+}
+
+.example-component.active {
+    transition: 1s;
+  opacity: 1;
+  visibility: visible; 
 }
 
 /* 1344 px */
