--- a/src/css/location-container.css
+++ b/src/css/location-container.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 380px;
+    width: 100%;
     height: 380px;
     margin: 0 auto;
     top: 0;
@@ -39,7 +39,7 @@
 /* 500px */
 @media (max-width: 500px) {
     .location-container {
-        margin: 25px auto;
+        margin: 0px auto;
         width: 338px;
         height: 338px;
     }
