--- a/src/css/section-header.css
+++ b/src/css/section-header.css
@@ -22,6 +22,10 @@
 
 /* 500 */
 @media (max-width: 500px) {
+    .section-header-container {
+        margin-top: 30px;
+    }
+
     .section-header-container h4 {
         font-size: 22px;
     }
